adding about page and layout changes

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "layoutdesigner",
-  "homepage": "https://erhan-namli.github.io/react-playard",
+  
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
