--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "layoutdesigner",
+  "homepage": "https://play-ard.github.io/",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
@@ -19,6 +19,7 @@
     "react-dropdown": "^1.9.2",
     "react-hook-form": "^7.28.0",
     "react-pro-sidebar": "^0.7.1",
+    "react-redirect": "^1.0.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
