--- a/package.json
+++ b/package.json
@@ -5,6 +5,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/chartjs": "^3.0.0",
+    "@coreui/coreui": "^4.2.0",
+    "@coreui/icons": "^2.1.0",
+    "@coreui/icons-react": "^2.1.0",
+    "@coreui/react": "^4.3.0",
+    "@coreui/react-chartjs": "^2.1.0",
+    "@coreui/utils": "^1.3.1",
+    "chart.js": "^3.8.0",
+    "classnames": "^2.3.1",
+    "core-js": "^3.23.4",
+    "prop-types": "^15.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
@@ -16,11 +27,15 @@
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-app-polyfill": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-hook-form": "^7.28.0",
+    "react-redux": "^8.0.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.1",
+    "redux": "4.2.0",
+    "simplebar-react": "^2.4.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "web-vitals": "^2.1.4"
