--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "playard",
-  "homepage": "playard.dev/",
-  "proxy": "https://playard.dev/",
+  "homepage": "/",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,18 +19,25 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "awesome-react-icons": "^1.4.8",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
     "classnames": "^2.3.1",
     "core-js": "^3.23.4",
     "emailjs-com": "^3.2.0",
+    "fa-icons": "^0.2.0",
+    "json-server": "^0.17.0",
     "prop-types": "^15.8.1",
+    "ra-data-simple-rest": "^4.2.5",
     "react": "^17.0.2",
+    "react-admin": "^4.2.5",
+    "react-admin-lb4": "^1.0.3",
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-hook-form": "^7.28.0",
+    "react-minimal-side-navigation": "^1.9.2",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.1",
@@ -46,7 +53,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "server": "json-server --watch db.json --port 5000"
   },
   "eslintConfig": {
     "extends": [
@@ -67,7 +75,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
     "gh-pages": "^3.2.3",
-    "sass": "^1.54.0"
+    "postcss": "^8.4.14",
+    "sass": "^1.54.0",
+    "tailwindcss": "^3.1.7"
   }
 }
