--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "emailjs-com": "^3.2.0",
     "fa-icons": "^0.2.0",
     "json-server": "^0.17.0",
+    "online-3d-viewer": "^0.8.23",
     "prop-types": "^15.8.1",
     "ra-data-simple-rest": "^4.2.5",
     "react": "^17.0.2",
